--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
 /* import */
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
+}
+
+body {
+    background: linear-gradient(135deg, #000000, #19141e);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 @import "variables";
 @import "fonts";
 @import "base";
